bitbucket-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitbucket-deploy
  labels:
    app: bitbucket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitbucket
  template:
    metadata:
      labels:
        app: bitbucket
    spec:
      containers:
      - name: bitbucket
        image: atlassian/bitbucket-server:latest
        ports:
        - containerPort: 7990
---
apiVersion: v1
kind: Service   
metadata:
  name: bitbucket-svc
  labels:
    app: bitbucket
spec:
  type: LoadBalancer 
  ports:
  - port: 7990  
    targetPort: 7990
    nodePort: 30003
  selector:
    app: bitbucket
