confluence-server-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence-server-deploy
  labels:
    app: confluence-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence-server
  template:
    metadata:
      labels:
        app: confluence-server
    spec:
      containers:
      - name: confluence-server
        image: atlassian/confluence-server:latest
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service   
metadata:
  name: confluence-server-svc
  labels:
    app: confluence-server
spec:
  type: LoadBalancer 
  ports:
  - port: 8090  
    targetPort: 8090
    nodePort: 30002
  selector:
    app: confluence-server
